--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
 <body>
   <nav>
     <ul>
-      <li>
-        <a href="#">
-          <img src="assets/icons/tigerconnect.svg" alt="TigerConnect logo">
-          <span>Messenger</span>
-        </a>
-      </li>
       <li class="active">
         <a href="#">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-inbox" width="44" height="44"
@@ -96,10 +90,10 @@
             </svg>
           </div>
         </fieldset>
-        <fieldset class="search">
+        <!-- <fieldset class="search">
           <input type="search" id="search-locations" name="search-locations" placeholder="Search locations">
           <label for="search-locations">Search locations</label>
-        </fieldset>
+        </fieldset> -->
       </form>
       <div class="profile">
         <img style="margin-top: -0.5rem;" src="assets/images/stephanie-liverani-Zz5LQe-VSMY-unsplash.jpg"
@@ -116,7 +110,6 @@
               <option>All Messages</option>
               <option>Direct Messages</option>
               <option>Group Messages</option>
-              <option>Teams</option>
               <option>Broadcast</option>
               <option>Forums</option>
             </select>
@@ -129,10 +122,10 @@
               </svg>
             </div>
           </fieldset>
-          <fieldset class="search">
+          <!-- <fieldset class="search">
             <input type="search" id="search-messages" name="search-messages" placeholder="Search messages">
             <label for="search-messages" style="display: none;">Search messages</label>
-          </fieldset>
+          </fieldset> -->
         </div>
         <div class="inbox-messages">
           <h3 style="display: none;">Messages list</h3>
@@ -188,7 +181,23 @@
         </div>
       </div>
       <div class="messages">
-        <h3>Message contents</h3>
+        <div class="message">
+          <div class="message-header">
+            <h3>Message contents</h3>
+            <span class="button" style="width: 1.5rem; height: 1.5rem;">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="24" height="24"
+                viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+              </svg>
+            </span>
+          </div>
+          <div class="message-content"></div>
+          <div class="message-footer"></div>
+        </div>
       </div>
     </section>
   </main>
