--- a/notifications.html
+++ b/notifications.html
@@ -19,12 +19,6 @@
   <nav>
     <ul>
       <li>
-        <a href="#">
-          <img src="assets/icons/tigerconnect.svg" alt="TigerConnect logo">
-          <span>Messenger</span>
-        </a>
-      </li>
-      <li>
         <a href="index.html">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-inbox" width="44" height="44"
             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
@@ -96,10 +90,10 @@
             </svg>
           </div>
         </fieldset>
-        <fieldset class="search">
+        <!-- <fieldset class="search">
           <input type="search" id="search-locations" name="search-locations" placeholder="Search locations">
           <label for="search-locations">Search locations</label>
-        </fieldset>
+        </fieldset> -->
       </form>
       <div class="profile">
         <img style="margin-top: -0.5rem;" src="assets/images/stephanie-liverani-Zz5LQe-VSMY-unsplash.jpg"
@@ -127,15 +121,15 @@
               </svg>
             </div>
           </fieldset>
-          <fieldset class="search">
+          <!-- <fieldset class="search">
             <input type="search" id="search-notifications" name="search-notifications" placeholder="Search notifications">
             <label for="search-notifications" style="display: none;">Search notifications</label>
-          </fieldset>
+          </fieldset> -->
         </div>
-        <div class="inbox-messages">
+        <div class="inbox-notifications">
           <h3 style="display: none;">Notifications list</h3>
           <ul>
-            <li>
+            <!-- <li>
               <div class="avatar">
                 <img src="assets/images/michael-dam-mEZ3PoFGs_k-unsplash.jpg" alt="Erika Kelley">
               </div>
@@ -181,11 +175,11 @@
                   <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
                 </svg>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
-      <div class="messages">
+      <div class="notifications">
         <h3>Notification contents</h3>
       </div>
     </section>
