--- a/index.html
+++ b/index.html
@@ -16,189 +16,13 @@
 </head>
 
 <body>
-  <nav>
-    <ul>
-      <li class="active">
-        <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-inbox" width="44" height="44"
-            viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
-            <path d="M4 13h3l3 3h4l3 -3h3" />
-          </svg>
-          <span>Inbox</span>
-        </a>
-      </li>
-      <li>
-        <a href="notifications.html">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bell" width="44" height="44"
-            viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M10 5a2 2 0 1 1 4 0a7 7 0 0 1 4 6v3a4 4 0 0 0 2 3h-16a4 4 0 0 0 2 -3v-3a7 7 0 0 1 4 -6" />
-            <path d="M9 17v1a3 3 0 0 0 6 0v-1" />
-          </svg>
-          <span>Notifications</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="44" height="44"
-            viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M9 7m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
-            <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
-            <path d="M16 3.13a4 4 0 0 1 0 7.75" />
-            <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
-          </svg>
-          <span>People</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="44" height="44"
-            viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path
-              d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" />
-            <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-          </svg>
-          <span>Settings</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+  <nav></nav>
   <main>
     <header>
-      <h2 style="display: none;">Header</h2>
-      <form>
-        <fieldset class="location">
-          <select>
-            <option>Location A</option>
-            <option>Location B</option>
-            <option>Location C</option>
-          </select>
-          <div class="select-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
-              height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
-              stroke-linecap="round" stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M6 9l6 6l6 -6" />
-            </svg>
-          </div>
-        </fieldset>
-        <!-- <fieldset class="search">
-          <input type="search" id="search-locations" name="search-locations" placeholder="Search locations">
-          <label for="search-locations">Search locations</label>
-        </fieldset> -->
-      </form>
-      <div class="profile">
-        <img style="margin-top: -0.5rem;" src="assets/images/stephanie-liverani-Zz5LQe-VSMY-unsplash.jpg"
-          alt="Stephanie Liverani">
-      </div>
+      <h2>Header</h2>
     </header>
-    <section class="content">
-      <h2 style="display: none;">Messages</h2>
-      <div class="inbox">
-        <h3>Inbox</h3>
-        <div class="inbox-control">
-          <fieldset>
-            <select>
-              <option>All Messages</option>
-              <option>Direct Messages</option>
-              <option>Group Messages</option>
-              <option>Broadcast</option>
-              <option>Forums</option>
-            </select>
-            <div class="select-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
-                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
-                stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M6 9l6 6l6 -6" />
-              </svg>
-            </div>
-          </fieldset>
-          <!-- <fieldset class="search">
-            <input type="search" id="search-messages" name="search-messages" placeholder="Search messages">
-            <label for="search-messages" style="display: none;">Search messages</label>
-          </fieldset> -->
-        </div>
-        <div class="inbox-messages">
-          <h3 style="display: none;">Messages list</h3>
-          <ul>
-            <li>
-              <div class="avatar">
-                <img src="assets/images/michael-dam-mEZ3PoFGs_k-unsplash.jpg" alt="Erika Kelley">
-              </div>
-              <div class="details">
-                <p>Erika Kelley</p>
-                <p>Most people make the mistake of thinking design is what it looks like. That's not what we think
-                  design is.</p>
-                <ul class="status">
-                  <li class="status">Read</li>
-                  <li class="time">11:48am</li>
-                </ul>
-              </div>
-              <div class="actions">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
-                  viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
-                  stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                  <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                  <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                </svg>
-              </div>
-            </li>
-            <li>
-              <div class="avatar">
-                <img src="assets/images/alexander-hipp-iEEBWgY_6lA-unsplash.jpg" alt="Alexander Hipp">
-              </div>
-              <div class="details">
-                <p>Alexander Hipp</p>
-                <p>It's not just what it looks like and feels like. Design is how it works.</p>
-                <ul class="status">
-                  <li class="status">Read</li>
-                  <li class="time">11:48am</li>
-                </ul>
-              </div>
-              <div class="actions">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
-                  viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
-                  stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                  <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                  <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                </svg>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="messages">
-        <div class="message">
-          <div class="message-header">
-            <h3>Message contents</h3>
-            <span class="button" style="width: 1.5rem; height: 1.5rem;">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="24" height="24"
-                viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-              </svg>
-            </span>
-          </div>
-          <div class="message-content"></div>
-          <div class="message-footer"></div>
-        </div>
-      </div>
+    <section class="content inbox">
+      <h2>Inbox</h2>
     </section>
   </main>
   <!-- scripts -->
