Application layout rough start

--- a/notifications.html
+++ b/notifications.html
@@ -16,13 +16,30 @@
 </head>
 
 <body>
-  <nav></nav>
+  <nav>
+    <h2>Nav</h2>
+  </nav>
   <main>
     <header>
       <h2>Header</h2>
     </header>
-    <section class="content">
-      <h2>Notifications</h2>
+    <section class="content notifications">
+      <h2>Content</h2>
+      <section class="content--list">
+        <h3>Content List</h3>
+      </section>
+      <section class="content--details">
+        <h3>Content Details</h3>
+        <div class="content--details--header">
+          <h4>Content Details Header</h4>
+        </div>
+        <div class="content--details--main">
+          <h4>Content Details Main</h4>
+        </div>
+        <div class="content--details--footer">
+          <h4>Content Details Footer</h4>
+        </div>
+      </section>
     </section>
   </main>
   <!-- scripts -->
