--- a/index.html
+++ b/index.html
@@ -16,13 +16,412 @@
 </head>
 
 <body>
-  <nav></nav>
+  <nav>
+    <ul>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Location
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Messages
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Roles &amp; Teams
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Analytics
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Patient Settings
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Virtual Waiting
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Patient Directory
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Broadcast Lists
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Profile
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon"></span>
+          Help
+        </a>
+      </li>
+    </ul>
+  </nav>
   <main>
     <header>
-      <h2>Header</h2>
+      <label for="search">Search</label>
+      <input type="search" id="search" name="search" placeholder="Search">
     </header>
-    <section class="content inbox">
-      <h2>Inbox</h2>
+    <section class="content">
+      <h2 style="display: none;">Content</h2>
+      <div class="content--list">
+        <h3>Content List</h3>
+        <div class="content--list-controls">
+          <details>
+            <summary>Views</summary>
+            <ul>
+              <li>
+                <a href="#!">Unread</a>
+              </li>
+              <li>
+                <a href="#!">Later</a>
+              </li>
+              <li>
+                <a href="#!">Mentions</a>
+              </li>
+              <li>
+                <a href="#!">Drafts</a>
+              </li>
+            </ul>
+          </details>
+          <form>
+            <fieldset>
+              <select>
+                <option>Filter Messages</option>
+                <option>Direct Messages</option>
+                <option>Group Messages</option>
+                <option>Broadcast</option>
+                <option>Forums</option>
+              </select>
+              <div class="select-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
+                  stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <path d="M6 9l6 6l6 -6"></path>
+                </svg>
+              </div>
+            </fieldset>
+            <fieldset>
+              <select>
+                <option>Sort Messages</option>
+                <option>High Priority</option>
+                <option>Medium Priority</option>
+                <option>Low Priority</option>
+              </select>
+              <div class="select-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
+                  stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <path d="M6 9l6 6l6 -6"></path>
+                </svg>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+        <ul class="list">
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              </p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              </p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              </p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M5 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+                <path d="M19 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+              </svg>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <section class="content--details">
+        <h3>Content Details</h3>
+        <div class="content--details-header">
+          <h4>Content Details Header</h4>
+        </div>
+        <div class="content--details-main">
+          <h4>Content Details Main</h4>
+        </div>
+        <div class="content--details-footer">
+          <h4>Content Details Footer</h4>
+        </div>
+      </section>
     </section>
   </main>
   <!-- scripts -->
