--- a/index.html
+++ b/index.html
@@ -19,10 +19,23 @@
   <nav>
     <ul>
       <li>
-        <a href="#">
-          <span class="icon"></span>
-          Location
-        </a>
+        <fieldset>
+          <select>
+            <option>Brigham and Women's Hospital</option>
+            <option>Massachusetts General Hospital</option>
+            <option>Beth Israel Deaconess Medical Center</option>
+            <option>UMass Memorial Medical Center</option>
+          </select>
+          <div class="select-icon" style="display: none;">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
+              height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
+              stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+              <path d="M6 9l6 6l6 -6"></path>
+            </svg>
+          </div>
+        </fieldset>
+        Location
       </li>
       <li>
         <a href="#">
