Updated location views; added FAB

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           </li>
         </ul>
         <div class="controls">
-          <span class="fab"></span>
+          <span class="fab">+</span>
         </div>
       </section>
       <section class="content--details">
