--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
       <section>
         <h2>Prototypes</h2>
         <h3>AMEN</h3>
-        <p><a href="projects/amen/views/dashboard/index.html">Dashboard</a></p>
+        <p><a href="projects/amen/views/dashboard/index.html" target="_blank">Dashboard</a></p>
         <h3>Messenger</h3>
         <h4>v1 concepts</h4>
         <ul class="contents">
-          <li><a href="projects/v1/views/concepts/concept-a.html">Concept A</a></li>
-          <li><a href="projects/v1/views/concepts/concept-b.html">Concept B</a></li>
-          <li><a href="projects/v1/views/concepts/concept-c.html">Concept C</a></li>
-          <li><a href="projects/v1/views/concepts/concept-d.html">Concept D</a></li>
+          <li><a href="projects/v1/views/concepts/concept-a.html" target="_blank">Concept A</a></li>
+          <li><a href="projects/v1/views/concepts/concept-b.html" target="_blank">Concept B</a></li>
+          <li><a href="projects/v1/views/concepts/concept-c.html" target="_blank">Concept C</a></li>
+          <li><a href="projects/v1/views/concepts/concept-d.html" target="_blank">Concept D</a></li>
         </ul>
-        <p><a href="projects/v1/views/locations/bawh.html">Location Switch Concept</a></p>
+        <p><a href="projects/v1/views/locations/bawh.html" target="_blank">Location Switch Concept</a></p>
       </section>
     </article>
   </main>
