--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <li><a href="components/cards.html">Cards</a></li>
           <li><a href="components/inputs.html">Inputs</a></li>
           <li><a href="components/layouts.html">Layouts</a></li>
+          <li>Tables</li>
         </ul>
       </section>
       <section>
