SW all toast samples added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
           <li><a href="components/cards.html">Cards</a></li>
           <li><a href="components/inputs.html">Inputs</a></li>
           <li><a href="components/layouts.html">Layouts</a></li>
-          <li>Tables</li>
+          <li class="visuallyhidden">Tables</li>
+          <li><a href="components/toasts.html">Toasts</a></li>
         </ul>
       </section>
       <section>
