--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <li><a href="components/inputs.html">Inputs</a></li>
           <li><a href="components/layouts.html">Layouts</a></li>
           <li class="visuallyhidden">Tables</li>
+          <li><a href="components/tabs.html">Tabs</a></li>
           <li><a href="components/toasts.html">Toasts</a></li>
         </ul>
       </section>
