AMEN integrations demo work

--- a/projects/amen/demos/orchestration/integrations/index.html
+++ b/projects/amen/demos/orchestration/integrations/index.html
@@ -44,6 +44,22 @@
   <main>
     <article>
       <h1>Integrations</h1>
+      <h2>Discovery</h2>
+      <ul class="no-bullets">
+        <li><a href="demos/orchestration/integrations/ports/index.html">Protocol &amp; Ports</a></li>
+        <li><a href="demos/orchestration/integrations/discovery/index.html">Discovery</a></li>
+        <li><a href="demos/orchestration/integrations/messages-display/index.html">Messages</a></li>
+      </ul>
+      <h2>Mapping</h2>
+      <ul class="no-bullets">
+        <li><a href="demos/orchestration/integrations/mapping-display/index.html">Mapping</a></li>
+      </ul>
+      <h2>Deployment</h2>
+      <ul class="no-bullets">
+        <li><a href="demos/orchestration/integrations/deploy-to-agent/index.html">Deploy to Agent</a></li>
+        <li><a href="demos/orchestration/integrations/deploy-active/index.html">Activate</a></li>
+        <li><a href="demos/orchestration/integrations/deploy-statistics/index.html">Statistics</a></li>
+      </ul>
     </article>
   </main>
   <footer>
