--- a/projects/amen/demos/orchestration/integrations/discovery/index.html
+++ b/projects/amen/demos/orchestration/integrations/discovery/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Skunk Works | TigerConnect</title>
+  <title>AMEN Skunk Works Discovery | TigerConnect</title>
   <base href="../../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -43,7 +43,10 @@
   </header>
   <main>
     <article>
-      <h1></h1>
+      <h1>Discovery</h1>
+      <p><a href="demos/orchestration/integrations/ports/index.html">Back to Protocols &amp; Ports</a></p>
+      <p><a href="demos/orchestration/integrations/messages-display/index.html">Enable Discovery mode</a></p>
+      <img style="display: none; padding-top: 1rem;" src="assets/images/demo-discovery.png">
     </article>
   </main>
   <footer>
