SW homepage and AMEN updates
Updated SW index link to new demo dashboard; updates to AMEN integrations staging up to deployment

--- a/projects/amen/demos/orchestration/dashboard/index.html
+++ b/projects/amen/demos/orchestration/dashboard/index.html
@@ -44,6 +44,7 @@
   <main>
     <article>
       <h1>Dashboard</h1>
+      <p><a href="demos/orchestration/integrations/ports/index.html">Setup Protocols &amp; Ports</a></p>
     </article>
   </main>
   <footer>
