--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
       <section>
         <h2>Prototypes</h2>
         <h3>AMEN</h3>
-        <p><a href="projects/amen/views/dashboard/index.html" target="_blank">Dashboard</a></p>
+        <ul class="contents">
+          <!-- <li><a href="projects/amen/views/dashboard/index.html" target="_blank">Dashboard v.0.2.1</a></li> -->
+          <li><a href="projects/amen/demos/orchestration/dashboard/index.html" target="_blank">Dashboard v.0.2.2</a></li>
+        </ul>
         <h3>Messenger</h3>
         <h4>v1 concepts</h4>
         <ul class="contents">
