--- a/projects/amen/demos/orchestration/integrations/mapping-display/index.html
+++ b/projects/amen/demos/orchestration/integrations/mapping-display/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Skunk Works | TigerConnect</title>
+  <title>AMEN Skunk Works Mapping | TigerConnect</title>
   <base href="../../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -43,7 +43,18 @@
   </header>
   <main>
     <article>
-      <h1></h1>
+      <h1>Mapping</h1>
+      <ol>
+        <li>Display message</li>
+        <ul>
+          <li>Raw message</li>
+          <li>Message structure</li>
+        </ul>
+        <li>Add/Change Mapping</li>
+        <li>Save Message Configuration</li>
+        <li>Publish &amp; Activate</li>
+      </ol>
+      <p><a href="demos/orchestration/integrations/deploy-to-agent/index.html">Go to Deploy to Agent</a></p>
     </article>
   </main>
   <footer>
