--- a/projects/amen/demos/orchestration/integrations/messages-search/index.html
+++ b/projects/amen/demos/orchestration/integrations/messages-search/index.html
@@ -46,7 +46,7 @@
       <h1>Search Messages</h1>
       <p><a href="demos/orchestration/integrations/discovery/index.html">Back to Discovery Mode</a></p>
       <img style="padding-top: 1rem;" src="assets/images/demo-discovery.png">
-      <p><a href="demos/orchestration/integrations/messages-select/index.html">Select Message</a></p>
+      <p><a href="demos/orchestration/integrations/mapping-display/index.html">Select Message &amp; Go to Mapping</a></p>
     </article>
   </main>
   <footer>
