Set AMEN images to display: none

--- a/projects/amen/demos/orchestration/integrations/messages-display/index.html
+++ b/projects/amen/demos/orchestration/integrations/messages-display/index.html
@@ -50,9 +50,8 @@
         <li>Parsing HL7 messages</li>
         <li>Display HL7 messages</li>
       </ol>
-      <img style="padding-top: 1rem;" src="assets/images/demo-parse-messages.png">
-      <!-- <img style="display: none; padding-top: 1rem;" src="assets/images/demo-parse-messages.png">
-      <img style="display: none; padding-top: 1rem;" src="assets/images/demo-discovery.png"> -->
+      <img style="display: none; padding-top: 1rem;" src="assets/images/demo-parse-messages.png">
+      <img style="display: none; padding-top: 1rem;" src="assets/images/demo-discovery.png">
       <p><a href="demos/orchestration/integrations/messages-search/index.html">Go to Messages Search</a></p>
     </article>
   </main>
