--- a/projects/amen/demos/orchestration/integrations/messages-search/index.html
+++ b/projects/amen/demos/orchestration/integrations/messages-search/index.html
@@ -45,7 +45,7 @@
     <article>
       <h1>Search Messages</h1>
       <p><a href="demos/orchestration/integrations/discovery/index.html">Back to Discovery Mode</a></p>
-      <img style="padding-top: 1rem;" src="assets/images/demo-discovery.png">
+      <img style="display: none; padding-top: 1rem;" src="assets/images/demo-discovery.png">
       <p><a href="demos/orchestration/integrations/mapping-display/index.html">Select Message &amp; Go to Mapping</a></p>
     </article>
   </main>
