--- a/projects/amen/demos/orchestration/integrations/ports/index.html
+++ b/projects/amen/demos/orchestration/integrations/ports/index.html
@@ -71,8 +71,7 @@
       </ol>
       <h2>Setup Complete</h2>
       <p><a href="demos/orchestration/integrations/discovery/index.html">Go to Discovery Mode</a></p>
-      <img style="padding-top: 1rem;" src="assets/images/demo-ports.png">
-      <!-- <img style="display: none; padding-top: 1rem;" src="assets/images/demo-ports.png"> -->
+      <img style="display: none; padding-top: 1rem;" src="assets/images/demo-ports.png">
     </article>
   </main>
   <footer>
