AMEN integrations work

--- a/projects/amen/demos/orchestration/integrations/integrations/index.html
+++ b/projects/amen/demos/orchestration/integrations/integrations/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Skunk Works Mapping | TigerConnect</title>
+  <title>AMEN Skunk Works Integrations | TigerConnect</title>
   <base href="../../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -34,7 +34,7 @@
     <nav>
       <ul>
         <li><a href="demos/orchestration/dashboard/index.html">Dashboard</a></li>
-        <li><a href="demos/orchestration/integrations/index.html">Integrations</a></li>
+        <li>Integrations</li>
         <li><a href="demos/orchestration/entities/index.html">Entities</a></li>
         <li><a href="demos/orchestration/workflows/index.html">Workflows</a></li>
         <li><a href="demos/orchestration/insights/index.html">Insights</a></li>
@@ -43,10 +43,11 @@
   </header>
   <main>
     <article>
-      <h1>Mapping</h1>
-      <section>
-        <h2>Edit Mapping</h2>
-      </section>
+      <h1>Integrations</h1>
+      <h2>Active Integrations</h2>
+      <p><a href="demos/orchestration/integrations/ports/index.html">HL7 ADT v2.x</a></p>
+      <img style="display: none; padding-top: 1rem;" src="assets/images/demo-discovery.png">
+      <a href="demos/orchestration/integrations/discovery/index.html" class="button primary">Enable Discovery mode</a>
     </article>
   </main>
   <footer>
