--- a/projects/amen/demos/orchestration/integrations/ports/index.html
+++ b/projects/amen/demos/orchestration/integrations/ports/index.html
@@ -126,7 +126,7 @@
           <fieldset class="small">
             <label for="integration-parsing-algorithm">Parsing algorithm</label>
             <select id="integration-parsing-algorithm" name="integration-parsing-algorithm">
-              <option label="HL7 ADT v2.x"></option>
+              <option label="HL7 ADT v2.x">HL7 ADT v2.x</option>
               <option label="First option sample">First option sample</option>
               <option label="Second option sample">Section option sample</option>
               <option label="Third option sample">Third option sample</option>
@@ -138,7 +138,7 @@
           </fieldset>
         </form>
         <div class="button-group">
-          <a href="demos/orchestration/integrations/discovery/index.html" class="button primary">Save Configuration</a>
+          <a href="demos/orchestration/integrations/integrations/index.html" class="button primary">Save Configuration</a>
         </div>
       </section>
       <ol class="visuallyhidden">
