--- a/projects/amen/demos/orchestration/integrations/discovery/index.html
+++ b/projects/amen/demos/orchestration/integrations/discovery/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Skunk Works Discovery | TigerConnect</title>
+  <title>AMEN Skunk Works Integrations | TigerConnect</title>
   <base href="../../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -26,6 +26,108 @@
     body.visible {
       opacity: 1;
     }
+    
+    label.progress {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      position: relative;
+      width: 100%;
+      max-width: 24rem;
+      overflow: hidden;
+      -webkit-transform: translate(0);
+      -moz-transform: translate(0);
+      -ms-transform: translate(0);
+      -o-transform: translate(0);
+      transform: translate(0);
+      -webkit-transition: all 0.25s ease 0s;
+      -moz-transition: all 0.25s ease 0s;
+      -ms-transition: all 0.25s ease 0s;
+      -o-transition: all 0.25s ease 0s;
+      transition: all 0.25s ease 0s
+    }
+
+    label.progress progress[value] {
+      display: block;
+      width: 100%;
+      height: 0.25rem;
+      margin: 0.5rem auto 0;
+      border: none;
+      background-color: var(--color--border);
+      -webkit-transition: all 0.25s ease 0s;
+      -moz-transition: all 0.25s ease 0s;
+      -ms-transition: all 0.25s ease 0s;
+      -o-transition: all 0.25s ease 0s;
+      transition: all 0.25s ease 0s
+    }
+
+    label.progress progress[value]::-moz-progress-bar {
+      background-color: var(--color--action-light);
+      -webkit-transition: all 0.25s ease 0s;
+      -moz-transition: all 0.25s ease 0s;
+      -ms-transition: all 0.25s ease 0s;
+      -o-transition: all 0.25s ease 0s;
+      transition: all 0.25s ease 0s
+    }
+
+    label.progress progress[value]::-webkit-progress-bar {
+      background-color: var(--color--border)
+    }
+
+    label.progress progress[value]::-webkit-progress-value {
+      background-color: var(--color--action-light);
+      -webkit-transition: all 0.25s ease 0s;
+      -moz-transition: all 0.25s ease 0s;
+      -ms-transition: all 0.25s ease 0s;
+      -o-transition: all 0.25s ease 0s;
+      transition: all 0.25s ease 0s
+    }
+
+    label.progress progress[value].complete {
+      opacity: 0
+    }
+
+    label.progress span {
+      text-align: right
+    }
+
+    label.progress progress:not([value]) {
+      display: block;
+      width: 100%;
+      height: 0.25rem;
+      margin: 0.5rem auto 0;
+      border: none;
+      background-color: var(--color--border)
+    }
+
+    label.progress span.indicator {
+      display: block;
+      position: relative;
+      top: -0.25rem;
+      width: 25%;
+      height: 0.25rem;
+      background-color: var(--color--action-light);
+      -webkit-animation-name: indicator-span;
+      animation-name: indicator-span;
+      -webkit-animation-duration: 2.5s;
+      animation-duration: 2.5s;
+      -webkit-animation-iteration-count: 2;
+      animation-iteration-count: 2;
+    }
+
+    label.progress span.indicator.visuallyhidden {
+      display: none;
+    }
+
+    @keyframes indicator-span {
+      from {
+        left: calc(0% - 25%)
+      }
+
+      to {
+        left: 100%
+      }
+    }
   </style>
 </head>
 
@@ -44,9 +146,27 @@
   <main>
     <article>
       <h1>Discovery</h1>
-      <p><a href="demos/orchestration/integrations/ports/index.html">Back to Protocols &amp; Ports</a></p>
+      <section>
+        <h2>Progress</h2>
+        <label class="progress" for="indeterminate">Transmitting HL7 messages
+          <progress id="transmitting" max="100" value="0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></progress>
+          <span class="indicator"></span>
+        </label>
+        <label class="progress" for="indeterminate" style="margin-top: 1rem;">Parsing HL7 messages
+          <progress id="parsing" max="100" value="0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></progress>
+          <span class="indicator"></span>
+        </label>
+      </section>
+      <section>
+        <h2>Incoming Messages</h2>
+        <ol class="messages visuallyhidden">
+          <li><a href="demos/orchestration/integrations/mapping-display/index.html">04 - Message</a></li>
+          <li><a href="demos/orchestration/integrations/mapping-display/index.html">03 - Message</a></li>
+          <li><a href="demos/orchestration/integrations/mapping-display/index.html">02 - Message</a></li>
+          <li><a href="demos/orchestration/integrations/mapping-display/index.html">01 - Message</a></li>
+        </ol>
+      </section>
       <img style="display: none; padding-top: 1rem;" src="assets/images/demo-discovery.png">
-      <p><a href="demos/orchestration/integrations/messages-display/index.html">Enable Discovery mode</a></p>
     </article>
   </main>
   <footer>
@@ -80,6 +200,13 @@
     var myElement = document.querySelector("header");
     var headroom = new Headroom(myElement);
     headroom.init();
+    // PROGRESS BARS
+    window.onload = function() {
+      setTimeout(function () {
+        $('.indicator').addClass('visuallyhidden');
+        $('.messages').removeClass('visuallyhidden');
+      },5000);
+    };
   </script>
 </body>
 
